components/oauth2-proxy-entraid-client-secret/namespace-test2.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test2
  annotations:
    argocd.argoproj.io/sync-options: Delete=false
    argocd.argoproj.io/sync-wave: '-10'
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
